--- a/style.scss
+++ b/style.scss
@@ -157,7 +157,7 @@ hr {
     text-align: center;
     border: 01px solid $paleGray;
     border-radius: 03px;
-    background: #ffffff;
+    background: $bg-secondary;
     font-weight: 400;
     color: $gray;
     font-size: 16px !important;
@@ -239,11 +239,11 @@ hr {
 
 ::-moz-selection {
   color: $white;
-  background: $blue;
+  background: $accent;
 }
 ::selection {
   color: $white;
-  background: $blue;
+  background: $accent;
 }
 
 blockquote {
@@ -267,7 +267,7 @@ pre,
 code {
   font-family: $code-font-family !important;
   font-size: 15px !important;
-  color: #e6edf3;
+  color: $text-code;
   border: 01px solid $border;
   border-radius: 03px;
   background-color: $bg-secondary;
@@ -511,7 +511,7 @@ nav {
       }
         @include mobile {
           margin: 0 10px;
-          color: $blue;
+          color: $accent-light;
         }
   }
 }
@@ -538,7 +538,7 @@ a.nav-menu-item:focus {
 
 .posts > .post {
   padding-bottom: 02em;
-  border-bottom: 01px solid $lightGray;
+  border-bottom: 01px solid $border;
 }
 
 .posts > .post:last-child {
